--- a/SurfsUp/SurfsUp/appsettings.json
+++ b/SurfsUp/SurfsUp/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SurfsUpContext": "Server = 10.56.8.36; Database=PEDB14;User Id = PE-14; Password=OPENDB_14;Trusted_Connection=False;MultipleActiveResultSets=true"
+    "SurfsUpContext": "Server = 10.56.8.36; Database=PEDB14;User Id = PE-14; Password=OPENDB_14;Trusted_Connection=False;MultipleActiveResultSets=true",
+    "LoginContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SurfsUp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
