External google login

--- a/SurfsUp/SurfsUp/appsettings.json
+++ b/SurfsUp/SurfsUp/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "SurfsUpContext": "Server = 10.56.8.36; Database=PEDB14;User Id = PE-14; Password=OPENDB_14;Trusted_Connection=False;MultipleActiveResultSets=true",
     "LoginContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SurfsUp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "1062652185560-tq6pi7sbkkgjntm7jsktmit8h81093ts.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
