--- a/SurfsUp/SurfsUpAPI/appsettings.json
+++ b/SurfsUp/SurfsUpAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SurfsUpContext": "Server = 10.56.8.36; Database=PEDB14;User Id = PE-14; Password=OPENDB_14;Trusted_Connection=False;MultipleActiveResultSets=true",
+    "LoginContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SurfsUp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
