--- a/SurfsUp/SurfsUp/SurfsUp.csproj
+++ b/SurfsUp/SurfsUp/SurfsUp.csproj
@@ -34,4 +34,8 @@
     <Folder Include="Areas\Identity\Data\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectCapability Include="CSharp;Managed;ClassDesigner" />
+	</ItemGroup>
+
 </Project>
